# python-ctypes

./: .gitignore  readme.md
ctypes/: setup.py  test-c.py
ctypes/hello/: __init__.py  hello.py
ctypes/src/: CMakeLists.txt  hello.c  hello.cpp  hello.h
